// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Paragraph /> by default matches with snapshot 1`] = `
<p
  className="sc-AxjAm fRkOMa"
>
  Lorem ipsum dolor sit amet…
</p>
`;

exports[`<Paragraph /> with margin matches with snapshot 1`] = `
<p
  className="sc-AxjAm fRkOMa"
/>
`;

exports[`<Paragraph /> with modifier matches with snapshot 1`] = `
<p
  className="sc-AxjAm fRkOMa"
/>
`;

exports[`<Paragraph /> without italic matches with snapshot 1`] = `
<p
  className="sc-AxjAm fRkOMa"
/>
`;

exports[`<Paragraph /> without normal line height matches with snapshot 1`] = `
<p
  className="sc-AxjAm fRkOMa"
/>
`;
